--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@
   trigger:
         - main
 
-        pool:
+        - pool:
           vmImage: 'ubuntu-1604' # set to windows-latest or another Windows vmImage for Windows builds
 
         variables:
